Checkpoint before assistant change: Improve the positioning of animated text, ensuring it avoids overlapping elements
Adjusts CSS classes in `public/out.css` and `public/style.css` to refine text placement and layering using z-index.

--- a/public/out.css
+++ b/public/out.css
@@ -573,20 +573,20 @@ video {
   left: 50%;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
 .top-\[15\%\] {
   top: 15%;
 }
 
 .left-\[10\%\] {
   left: 10%;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .left-\[5\%\] {
@@ -635,6 +635,10 @@ video {
 
 .z-20 {
   z-index: 20;
+}
+
+.z-30 {
+  z-index: 30;
 }
 
 .order-1 {
@@ -1074,14 +1078,14 @@ video {
   line-height: 2.5rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
