--- a/public/style.css
+++ b/public/style.css
@@ -641,6 +641,10 @@ video {
   z-index: 20;
 }
 
+.z-30 {
+  z-index: 30;
+}
+
 .order-1 {
   order: 1;
 }
